--- a/css/style.css
+++ b/css/style.css
@@ -44,25 +44,31 @@ body {
 .navigation {
   display: flex;
   justify-content: space-between;
-  padding: 5rem 3rem;
+  align-items: center;
+  padding: 2rem 3rem 4rem;
 }
 
 .nav-item {
   transition: all 0.3s;
 }
 
-.nav-item a:link {
+.nav-item a {
   text-decoration: none;
   color: #fff;
   transition: all 0.3s;
 }
 
 .nav-item a:hover {
-  color: rgb(206, 188, 188);
+  color: #dcb063;
 }
 
 .nav-item:hover {
   transform: scale(1.1);
+}
+
+ion-icon {
+  height: 3rem;
+  width: 3rem;
 }
 
 li {
@@ -71,18 +77,21 @@ li {
 
 .nav-list {
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 2rem;
 }
 
 .logo span {
   font-size: 2.6rem;
   font-weight: bolder;
-  color: rgb(206, 188, 188);
+  color: #cf9c46;
 }
 
 .hero-intro {
   text-align: center;
   max-width: 60rem;
+  text-align: center;
 }
 
 .hero-intro {
@@ -107,6 +116,8 @@ li {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   gap: 2rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .product {
@@ -123,8 +134,12 @@ li {
 
 .product-description {
   color: whitesmoke;
+  font-size: smaller;
+  max-width: 20rem;
   text-align: center;
   padding: 1rem;
+  font-weight: lighter;
+  margin: auto;
 }
 
 /* CATALOGUE SECTION */
@@ -136,7 +151,7 @@ li {
 .catalogue-intro {
   color: #555;
   margin: auto;
-  padding: 10rem 2rem;
+  padding: 10rem 2rem 5rem;
   text-align: center;
   max-width: 70rem;
   line-height: 1.3;
@@ -144,4 +159,19 @@ li {
 
 .heading-secondary {
   color: #222;
+}
+
+.collection-one {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15rem;
+}
+
+.collection-img {
+  height: 15rem;
+}
+
+.collection-img img {
+  height: 100%;
 }
