--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ li {
   text-align: center;
   max-width: 60rem;
   text-align: center;
+  line-height: 1.3;
 }
 
 .hero-intro {
@@ -102,7 +103,7 @@ li {
 .heading-primary,
 .heading-secondary {
   color: whitesmoke;
-  font-size: 5rem;
+  font-size: 6rem;
   font-weight: lighter;
   margin-bottom: 2rem;
 }
@@ -165,13 +166,128 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 15rem;
+  gap: 8rem;
+  max-width: 120rem;
+  margin: auto;
 }
 
 .collection-img {
+  display: grid;
   height: 15rem;
+  justify-items: center;
 }
 
 .collection-img img {
+  height: 10rem;
+}
+
+.collection-text {
+  text-align: center;
+}
+
+.collection-text h4 {
+  margin-bottom: 1.2rem;
+}
+
+.collection-text p {
+  color: #555;
+}
+
+.perfume-group-section {
+  padding: 6rem;
+  background-color: #555;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.perfume-group-images {
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+  justify-content: center;
+  /* width: 50%; */
+  gap: 1rem;
+}
+
+.perfume-group-img {
+  height: 35rem;
+  width: fit-content;
+}
+
+.perfume-group-img img {
   height: 100%;
+}
+
+.dis-flex {
+  display: flex;
+}
+
+.gap-md {
+  gap: 2rem;
+}
+
+.mar-bottom {
+  margin-bottom: 1.4rem;
+}
+
+.align-just-ct {
+  align-items: center;
+  justify-content: center;
+}
+
+.perfume-group-text {
+  text-align: center;
+  margin: 6rem auto;
+  color: whitesmoke;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  padding: 5rem;
+}
+
+.perfume-group-text h2 {
+  font-size: 5rem;
+  margin-bottom: 2rem;
+  color: #cf9c46;
+}
+
+.perfume-group-text p {
+  margin-bottom: 2rem;
+}
+
+.perfume-group-text h4 {
+  margin-bottom: 6rem;
+}
+
+.perfume-group-list {
+  text-align: left;
+  font-size: 3rem;
+  padding-left: 5rem;
+  margin-top: 3rem;
+}
+
+.perfume-group-list li {
+  list-style-type: georgian;
+}
+
+.perfume-group-btn {
+  display: inline-block;
+  /* align-items: center; */
+  color: #cf9c46;
+  text-decoration: none;
+  font-size: 2rem;
+  margin-top: 5rem;
+  margin-left: 45rem;
+  transition: all 0.3s;
+  /* justify-content: end; */
+}
+
+.perfume-group-btn:hover {
+  color: #dcb063;
+  transform: scale(1.1);
+  color: whitesmoke;
+}
+
+.arrow-right {
+  height: 2rem;
+  width: 2rem;
 }
