Added new css file(general.css), added some re-usable classes, adjusted class names to be more descriptive.

--- a/css/queries.css
+++ b/css/queries.css
@@ -1,4 +1,4 @@
-/* Below 685px */
+/************ Below 685px ************/
 @media (max-width: 43em) {
   .hero-intro {
     padding: 2rem !important;
@@ -51,7 +51,7 @@
   }
 }
 
-/* Below 424px */
+/**************** Below 424px ********************/
 @media (max-width: 27em) {
   .nav-first {
     display: none;
