Added Add-to-Cart buttons and price tags on hero section products, fixed issue of contrast ratio on image overlay text on frag section

--- a/css/general.css
+++ b/css/general.css
@@ -30,6 +30,14 @@ li {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
+.btn {
+  cursor: pointer;
+}
+
 /* HEADINGS */
 .heading-primary,
 .heading-secondary {
