--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@
 }
 
 .product {
+  position: relative;
   height: 40rem;
   transition: all 0.5s;
 }
@@ -99,12 +100,49 @@
   transform: scale(1.1);
 }
 
+.product:hover .product-btn-box {
+  display: block;
+}
+
 .product-list img {
   height: 100%;
 }
 
 .product-list h4 {
   margin-bottom: 1rem;
+}
+
+.product-btn-box {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  display: none;
+}
+.product-price {
+  color: orangered;
+  font-size: 1.2rem;
+  width: 0;
+  display: inline-block;
+  visibility: hidden;
+  /* margin-right: 2rem; */
+}
+
+.product-btn-box:hover .product-price {
+  width: 4.8rem;
+  transition: 0.3s;
+  visibility: visible;
+}
+
+.product-btn-box .btn {
+  background-color: #cf9c46;
+}
+
+.product-btn-box .btn:active {
+  transform: scale(0.95);
+}
+
+.product-btn-box .btn:hover {
+  background-color: #e8c88f;
 }
 
 .product-description {
@@ -197,15 +235,20 @@
   position: absolute;
   height: 0%;
   width: 100%;
-  background-color: #1d1c1beb;
+  background-color: #00000087;
   bottom: 0;
   left: 0;
   transition: all 0.5s;
+  z-index: 1;
+}
+
+.image-overlay-2 {
+  z-index: 0;
 }
 
 .frag-perf-title {
   /* padding: 2rem; */
-  color: #fff;
+  color: #df9414;
 }
 
 .frag-perf-subtitle {
@@ -256,7 +299,7 @@
 .four-frag-text h2 {
   font-size: 5rem;
   margin-bottom: 2rem;
-  color: #cf9c46;
+  color: #df9414;
 }
 
 .four-frag-pricetag {
@@ -308,7 +351,7 @@
 }
 
 .four-frag-btn:hover .four-frag-icon {
-  color: #cf9c46;
+  color: #df9414;
 }
 
 .btn {
